# swiftly-app

./: .dockerfile  .env  .firebaserc  .gitignore  Readme.md  core.py  private_key.pem  pyproject.toml  rxconfig.py  test.py
.firebase/: hosting.YnVpbGQ.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
app/: app.py
app/server/controllers/: user_controller.py
app/server/database/: fileRepositorie.py  firebaseConection.py  guideRepositorie.py  recipientRepositorie.py  senderRepositorie.py  serviceTypeRepositorie.py  userRepositorie.py
app/server/models/: file.py  guide.py
app/server/services/: fileService.py  guideService.py  recipientService.py  senderService.py  serviceTypeService.py  userService.py
app/views/anim/: animation_view.py
app/views/auth/: forgot_password_view.py  login_view.py  signup_view.py
app/views/dashboard/: home_view.py
app/views/home/: dashboard_view.py
app/views/intro/: intro_view.py
app/views/tracking/: tracking_view.py
app/views/viewState/: userState.py
assets/: 3696912.ai
assets/design/: 3696916.eps
main/: main.py
main/server/controllers/: countries_controller.py  countrys_controller.py  departments_controller.py  guides_controller.py  user_controller.py
main/server/model_v1/: file.py  guide.py  recipient.py
main/server/models/: Box.py  Envelope.py  GuideStatus.py  file.py  guide.py  recipient.py  sender.py  serviceType.py  user.py
main/ui/components/: progress_modal.py  table_interactive.py
main/ui/states/: contryState.py  countriesState.py  countryState.py  pageState.py  (+5 more)
(+51 files in other folders)
