[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# definir los scripts que se van a ejecutar para la creaci贸n de la aplicaci贸n
name = "core"
version = "0.1.0"
description = ""
authors = ["Valfonsoardila10 <victoradila@gmail.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.10"
reflex = "^0.5.9"

[tool.poetry.scripts]
# definir los scripts que se van a ejecutar para la creaci贸n de la aplicaci贸n
create-skln = "core:create_skeleton"
--frontend = "core:run_frontend"
--backend = "core:run_backend"